# ravioli

./: .gitignore  best-sentences.sh  character_distribution.sh  cleanup_default.sh  cleanup_deu.sh  cleanup_fra.sh  cleanup_ita.sh  create_opensub_translation_db.sh  create_tatoeba_translation_db.sh  create_translation_db.sh  import-data-sqlite.sh  iso639-1-to-3.py  iso639-3-to-1.py  languagesForWebApp.sh  machine-translate.sh  normalize_unicode.sh  paraphrases.sh  prune_default.sh  prune_deu.sh  prune_fra.sh  prune_ita.sh  prune_jpn.sh  prune_spa.sh  prune_swe.sh  readme.md  requirements.txt  reset.sh  script.sh  sentences_stanza.py  spotty.yaml  test.sh  tokenize_stanza.py  translate_model.sh  translation_graph.sh  translation_test.sh  translations.sh
docker/: Dockerfile
extractor/: Cargo.toml
extractor/src/: char_windows.rs  corpus.rs  flexgrams.rs  main.rs  skipgrams.rs
ravioli-ui/: .firebaserc  .gitignore  package-lock.json  package.json  rollup.config.js  svelte.config.js
ravioli-ui/public/: index.html  manifest.json
ravioli-ui/src/: App.svelte  PatternOverview.svelte  SenteceDiff.svelte  SentenceDiff.svelte  SvelteSubject.ts  Tailwind.svelte  classes.ts  db.ts  model.ts  model_utils.ts  modelstorage.ts  translation.ts  utils.ts
tokenizer/: Cargo.toml  saved
tokenizer/src/: main.rs
