[package]
name = "extractor"
version = "0.1.0"
authors = ["Felix Dietze <felix.dietze@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
ouroboros = "0.4.1"
rayon = "1.5.0"
regex = "1.4.1"
unicode-segmentation = "1.6.0"
