[package]
name = "tokenizer"
version = "0.1.0"
authors = ["Felix Dietze <felix.dietze@rwth-aachen.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokenizers = "0.10.1"
tokenizers = { git = "https://github.com/huggingface/tokenizers" }
